--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,6 @@ License: GPLv3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Imports: tidyverse, mlr3, mlr3bench, mlr3learners
+Imports: tidyverse, mlr3, mlr3benchmark, mlr3learners
     
     
