--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,6 @@
 export(eval_split_ratio)
 export(rsmp_mce)
 import(mlr3)
-import(mlr3bench)
+import(mlr3benchmark)
 import(mlr3learners)
 import(tidyverse)
